--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "hardhat": "^2.9.9",
     "hardhat-gas-reporter": "^1.0.4",
     "prettier": "^2.3.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.13",
+    "prettier-plugin-solidity": "^1.0.0-dev.23",
+    "prettierrc": "^0.0.0-5",
     "solhint": "^3.3.6",
     "solidity-coverage": "^0.7.16",
     "ts-node": "^10.1.0",
