--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.27.2"
   },
   "devDependencies": {
+    "@axelar-network/axelarjs-sdk": "^0.6.14-alpha.0",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
