--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.0",
     "hardhat": "^2.9.9",
+    "hardhat-ethernal": "^1.0.0",
     "hardhat-gas-reporter": "^1.0.4",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-dev.23",
