--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.ts",
   "license": "MIT",
   "dependencies": {
+    "@uniswap/sdk": "^3.0.3",
     "axios": "^0.27.2"
   },
   "devDependencies": {
